Fix T80043: missing Cycles displacement update when relinking output sockets